--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
   <div id="homeSection" class="sect sectOne">
     <div class="caption">
-      <span class="border">PICERIJA KOD DEBELOG</span>
+      <span class="border">picerija kod debelog</span>
     </div>
   </div>
   <div id="aboutSection" class="subSect sectTwo">
