--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <title>webVezba</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/skeleton.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
   <script src="lib/jquery-3.2.1.min.js"></script>
@@ -37,19 +39,19 @@
   </div>
   <div id="gallerySection" class="sect sectTree">
     <div class="pizza">
-      <figure class="columns four"><img src="slike/pica1.png"></figure>
-      <figure class="columns four"><img src="slike/pica2.png"></figure>
-      <figure class="columns four"><img src="slike/pica3.png"></figure>
+      <figure class="columns four"><img src="slike/pica1.png"><p>Kapricoza</p></figure>
+      <figure class="columns four"><img src="slike/pica2.png"><p>Kulen</p></figure>
+      <figure class="columns four"><img src="slike/pica3.png"><p>Srce</p></figure>
     </div>
     <div class="pizza">
-      <figure class="columns four"><img src="slike/pica1.png"></figure>
-      <figure class="columns four"><img src="slike/pica2.png"></figure>
-      <figure class="columns four"><img src="slike/pica3.png"></figure>
+      <figure class="columns four"><img src="slike/pica1.png"><p>Kapricoza</p></figure>
+      <figure class="columns four"><img src="slike/pica2.png"><p>Kulen</p></figure>
+      <figure class="columns four"><img src="slike/pica3.png"><p>Srce</p></figure>
     </div>    
     <div class="pizza">
-      <figure class="columns four"><img src="slike/pica1.png"></figure>
-      <figure class="columns four"><img src="slike/pica2.png"></figure>
-      <figure class="columns four"><img src="slike/pica3.png"></figure>
+      <figure class="columns four"><img src="slike/pica1.png"><p>Kapricoza</p></figure>
+      <figure class="columns four"><img src="slike/pica2.png"><p>Kulen</p></figure>
+      <figure class="columns four"><img src="slike/pica3.png"><p>Srce</p></figure>
     </div>    
   </div>
   <div id="contactSection" class="subSect sectFour">
@@ -78,13 +80,14 @@
         </div>
         <div>
           <i class="fa fa-envelope"></i>
-          <p><a href="mailto:support@company.com">support@company.com</a></p>
+          <p><a href="mailto:support@company.com">picerjakod@debelog.com</a></p>
         </div>
       </div>
       <div class="footer-right">
         <p class="footer-company-about">
-          <span>About the company</span>
-          Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+          <span>O nama</span>
+        Mi iz Picerije "Debelog" smo jako ponosni na našu hranu.
+        Vodimo računa na ono što ulazi u našu kuhinju i na ono što izlazi iz nje.
         </p>
         <div class="footer-icons">
           <a href="#"><i class="fa fa-facebook"></i></a>
