--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div id="contactSection" class="subSect sectFour">
     <footer class="footer-distributed">
       <div class="footer-left">
-        <h2>PERIJA<br><span>kod DEBELOG</span></h2>
+        <h2>PICERIJA<br><span>kod DEBELOG</span></h2>
         <p class="footer-links">
           <a href="#homeSection">Početna</a>
           ·
@@ -80,7 +80,7 @@
         </div>
         <div>
           <i class="fa fa-envelope"></i>
-          <p><a href="mailto:support@company.com">picerjakod@debelog.com</a></p>
+          <p><a href="mailto:support@company.com">picerijakod@debelog.com</a></p>
         </div>
       </div>
       <div class="footer-right">
