--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div>
           <i class="fa fa-envelope"></i>
-          <p><a href="mailto:support@company.com">picerijakod@debelog.com</a></p>
+          <p><a href="picerijakod@debelog.com">picerijakod@debelog.com</a></p>
         </div>
       </div>
       <div class="footer-right">
