--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <div>
     <ul class="menu">
       <li><a id="home" href="#homeSection">Početna</a></li>
       <li><a id="about" href="#aboutSection">O nama</a></li>
